[package]
name = "gcm-lcm"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Radcliffe <andrewjradcliffe@gmail.com>"]
description = "Greatest convex minorant, least concave majorant"
repository = "https://github.com/andrewjradcliffe/gcm-lcm/"
license = "MIT OR Apache-2.0"
keywords = ["convex", "minorant", "concave", "majorant", "statistics"]
categories = ["mathematics", "algorithms", "science"]

[dependencies]
